--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <title>Frontend Mentor | Product preview card component</title>
     <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon.png">
+
+    <link rel="stylesheet" href="/public/css/style.css">
 </head>
 
 <body>
@@ -22,11 +24,11 @@
                 </p>
 
                 <div class="product__price">
-                    <div class="discount">$149.99</div>
-                    <div class="actual">$169.99</div>
+                    <div class="price__discount">$149.99</div>
+                    <div class="price__actual">$169.99</div>
                 </div>
                 <button>
-                    <img src="/images/icon-cart.svg" alt="cart icon">
+                    <img src="/public/icon-cart.svg" alt="cart icon">
                     Add to Cart
                 </button>
             </div>
