🐞 Resolve path issue

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Frontend Mentor | Product preview card component</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/favicon.png">
 
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="./public/css/style.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
                     <div class="price__actual">$169.99</div>
                 </div>
                 <button>
-                    <img src="/public/icon-cart.svg" alt="cart icon">
+                    <img src="./public/icon-cart.svg" alt="cart icon">
                     Add to Cart
                 </button>
             </div>
